fix alignment

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@
 
 code.hljs{
   display: inline-block !important;
+  vertical-align: top !important;
 }
 
 .hljs-keyword,
